--- a/index.html
+++ b/index.html
@@ -229,56 +229,98 @@
                     Espresso<br>
                     <span>Espresso, where passion meets perfection.</span>
                 </div>
-                <div class="medium-price">1.75</div>
-                <div class="large-price">2.20</div>
+                <div class="medium-price">
+                    <span>Medium - </span>
+                    1.75
+                </div>
+                <div class="large-price">
+                    <span>Large - </span>
+                    2.20
+                </div>
             </div>
             <div class="menu-item2">
                 <div class="coffee-name">
                     Mocchiato<br>
                     <span>The perfect harmony of espresso and sweetness</span>
                 </div>
-                <div class="medium-price">1.75</div>
-                <div class="large-price">2.20</div>
+                <div class="medium-price">
+                    <span>Medium - </span>
+                    1.75
+                </div>
+                <div class="large-price">
+                    <span>Large - </span>
+                    2.20
+                </div>
             </div>
             <div class="menu-item3">
                 <div class="coffee-name">
                     Classic Cappucino<br>
                     <span>A timeless delight brewed just for you.</span>
                 </div>
-                <div class="medium-price">1.75</div>
-                <div class="large-price">2.20</div>
+                <div class="medium-price">
+                    <span>Medium - </span>
+                    1.75
+                </div>
+                <div class="large-price">
+                    <span>Large - </span>
+                    2.20
+                </div>
             </div>
             <div class="menu-item4">
                 <div class="coffee-name">
                     Cappucino<br>
                     <span>Where rich espresso meets frothy perfection.</span>
                 </div>
-                <div class="medium-price">1.75</div>
-                <div class="large-price">2.20</div>
+                <div class="medium-price">
+                    <span>Medium - </span>
+                    1.75
+                </div>
+                <div class="large-price">
+                    <span>Large - </span>
+                    2.20
+                </div>
             </div>
             <div class="menu-item5">
                 <div class="coffee-name">
                     Mocha Latte<br>
                     <span>The perfect blend of chocolate and espresso.</span>
                 </div>
-                <div class="medium-price">1.75</div>
-                <div class="large-price">2.20</div>
+                <div class="medium-price">
+                    <span>Medium - </span>
+                    1.75
+                </div>
+                <div class="large-price">
+                    <span>Large - </span>
+                    2.20
+                </div>
             </div>
             <div class="menu-item6">
                 <div class="coffee-name">
                     Caramel Latte<br>
                     <span>Where smooth espresso meets golden caramel bliss.</span>
                 </div>
-                <div class="medium-price">1.75</div>
-                <div class="large-price">2.20</div>
+                <div class="medium-price">
+                    <span>Medium - </span>
+                    1.75
+                </div>
+                <div class="large-price">
+                    <span>Large - </span>
+                    2.20
+                </div>
             </div>
             <div class="menu-item7">
                 <div class="coffee-name">
                     Cafe Americano<br>
                     <span>The essence of pure coffee bliss.</span>
                 </div>
-                <div class="medium-price">1.75</div>
-                <div class="large-price">2.20</div>
+                <div class="medium-price">
+                    <span>Medium - </span>
+                    1.75
+                </div>
+                <div class="large-price">
+                    <span>Large - </span>
+                    2.20
+                </div>
             </div>
         </div>
         <div class="menu-list-2">
@@ -294,60 +336,115 @@
                     Espresso<br>
                     <span>Espresso, where passion meets perfection.</span>
                 </div>
-                <div class="medium-price">1.75</div>
-                <div class="large-price">2.20</div>
+                <div class="medium-price">
+                    <span>Medium - </span>
+                    1.75
+                </div>
+                <div class="large-price">
+                    <span>Large - </span>
+                    2.20
+                </div>
             </div>
             <div class="menu-item2">
                 <div class="coffee-name">
                     Mocchiato<br>
                     <span>The perfect harmony of espresso and sweetness</span>
                 </div>
-                <div class="medium-price">1.75</div>
-                <div class="large-price">2.20</div>
+                <div class="medium-price">
+                    <span>Medium - </span>
+                    1.75
+                </div>
+                <div class="large-price">
+                    <span>Large - </span>
+                    2.20
+                </div>
             </div>
             <div class="menu-item3">
                 <div class="coffee-name">
                     Classic Cappucino<br>
                     <span>A timeless delight brewed just for you.</span>
                 </div>
-                <div class="medium-price">1.75</div>
-                <div class="large-price">2.20</div>
+                <div class="medium-price">
+                    <span>Medium - </span>
+                    1.75
+                </div>
+                <div class="large-price">
+                    <span>Large - </span>
+                    2.20
+                </div>
             </div>
             <div class="menu-item4">
                 <div class="coffee-name">
                     Cappucino<br>
                     <span>Where rich espresso meets frothy perfection.</span>
                 </div>
-                <div class="medium-price">1.75</div>
-                <div class="large-price">2.20</div>
+                <div class="medium-price">
+                    <span>Medium - </span>
+                    1.75
+                </div>
+                <div class="large-price">
+                    <span>Large - </span>
+                    2.20
+                </div>
             </div>
             <div class="menu-item5">
                 <div class="coffee-name">
                     Mocha Latte<br>
                     <span>The perfect blend of chocolate and espresso.</span>
                 </div>
-                <div class="medium-price">1.75</div>
-                <div class="large-price">2.20</div>
+                <div class="medium-price">
+                    <span>Medium - </span>
+                    1.75
+                </div>
+                <div class="large-price">
+                    <span>Large - </span>
+                    2.20
+                </div>
             </div>
             <div class="menu-item6">
                 <div class="coffee-name">
                     Caramel Latte<br>
                     <span>Where smooth espresso meets golden caramel bliss.</span>
                 </div>
-                <div class="medium-price">1.75</div>
-                <div class="large-price">2.20</div>
+                <div class="medium-price">
+                    <span>Medium - </span>
+                    1.75
+                </div>
+                <div class="large-price">
+                    <span>Large - </span>
+                    2.20
+                </div>
             </div>
             <div class="menu-item7">
                 <div class="coffee-name">
                     Cafe Americano<br>
                     <span>The essence of pure coffee bliss.</span>
                 </div>
-                <div class="medium-price">1.75</div>
-                <div class="large-price">2.20</div>
+                <div class="medium-price">
+                    <span>Medium - </span>
+                    1.75
+                </div>
+                <div class="large-price">
+                    <span>Large - </span>
+                    2.20
+                </div>
             </div>
         </div>
     </div>
-    <div class="content">
+    <!-- <div class="review-parent">
+        <div class="review-img"></div>
+        <div class="actual-review">
+            <div class="review-headings">
+                <div class="review-main--heading">Customer</div>
+                <div class="review-sub--heading" style="font-weight: 600;">REVIEW</div>
+            </div>
+            <div class="review-detail">
+                As a busy professional, I rely on my morning coffee to kickstart my day. The rich, smooth taste and heavenly aroma never fail to perk me up and get me ready to tackle whatever the day throws at me. It's like a little slice of heaven in a cup!
+            </div>
+            <div class="reviewer-name">Jenna Smith</div>
+        </div>
+    </div> -->
+    <div class="content" style="color: white;">
         <h1>Sample Website</h1>
     </div>
 </body>
