menu btn changes

--- a/index.html
+++ b/index.html
@@ -322,6 +322,9 @@
                     2.20
                 </div>
             </div>
+            <div class="view-menu-1" id="view-menu">
+                <button>View All Menu</button>
+            </div>
         </div>
         <div class="menu-list-2">
             <div class="menu-coffee">
@@ -429,9 +432,12 @@
                     2.20
                 </div>
             </div>
+            <div class="view-menu-2" id="view-menu">
+                <button>View All Menu</button>
+            </div>
         </div>
     </div>
-    <!-- <div class="review-parent">
+    <div class="review-parent">
         <div class="review-img"></div>
         <div class="actual-review">
             <div class="review-headings">
@@ -441,9 +447,9 @@
             <div class="review-detail">
                 As a busy professional, I rely on my morning coffee to kickstart my day. The rich, smooth taste and heavenly aroma never fail to perk me up and get me ready to tackle whatever the day throws at me. It's like a little slice of heaven in a cup!
             </div>
-            <div class="reviewer-name">Jenna Smith</div>
+            <div class="reviewer-name" style="font-family: 'oswald'; padding-bottom: 20px;">Jenna Smith</div>
         </div>
-    </div> -->
+    </div>
     <div class="content" style="color: white;">
         <h1>Sample Website</h1>
     </div>
