contact-number space

--- a/index.html
+++ b/index.html
@@ -450,6 +450,18 @@
             <div class="reviewer-name" style="font-family: 'oswald'; padding-bottom: 20px;">Jenna Smith</div>
         </div>
     </div>
+    <div class="contact-number" style="color: white;">
+        <div class="right-side">
+            <i class="fa-solid fa-phone" style="color: #21A7B2;"></i>
+            <p>Call us now and get special offers!</p>
+        </div>
+        <div class="left-side">
+            <button>Call Us Now</button>
+        </div>
+    </div>
+    <div class="footer-1">
+
+    </div>
     <div class="content" style="color: white;">
         <h1>Sample Website</h1>
     </div>
