landing-page done

--- a/index.html
+++ b/index.html
@@ -460,10 +460,43 @@
         </div>
     </div>
     <div class="footer-1">
-
+        <div class="footer1-headings">
+            <h1 class="footer1-main--heading">EnjoyYourself</h1>
+            <h2 class="footer1-sub--heading">AT</h2>
+            <h1 class="footer1-main--heading">BrewTopia</h1>
+        </div>
+        <div class="cafe-timings" style="display: flex; margin: 100px 0 0 0; padding-bottom: 80px; justify-content: center; gap: 100px; flex-wrap: wrap;">
+            <div class="timings">
+                <p class="days">Mon-Tue</p>
+                <p class="hours">9:30AM-11:00PM</p>
+            </div>
+            <div class="timings">
+                <p class="days">Friday</p>
+                <p class="hours">9:30AM-11:00PM</p>
+            </div>
+            <div class="timings">
+                <p class="days">Sat-Sun</p>
+                <p class="hours">9:30AM-11:00PM</p>
+            </div>
+        </div>
     </div>
-    <div class="content" style="color: white;">
-        <h1>Sample Website</h1>
+    <div class="footer">
+        <div class="address" >
+            <p style="font-family: 'plus jakarta sans', sans-serif; font-weight: 600;">Our Location</p>
+            <p style="font-family: 'plus jakarta sans', sans-serif; font-size: clamp(10px, calc(12px + 0.2vw), 14px); font-weight: 300; margin-top: 10px;">Lalu Khet Das Number, Gali No. 420</p>
+            <p style="font-family: 'plus jakarta sans', sans-serif; font-size: clamp(10px, calc(12px + 0.2vw), 14px); font-weight: 300; margin-top: 10px;">T.(208)090078601</p>
+            <p style="font-family: 'plus jakarta sans', sans-serif; font-size: clamp(10px, calc(12px + 0.2vw), 14px); font-weight: 300; margin-top: 10px;">E.shahoodkhan@gmail.com</p>
+        </div>
+        <div class="footer-logo" >
+            <img src="assets/logo.png" style="width: 50%;">
+        </div>
+        <div class="socialmedia--icons">
+            <i class="fa-brands fa-facebook-f"></i>
+            <i class="fa-brands fa-twitter"></i>
+            <i class="fa-solid fa-wifi"></i>
+            <i class="fa-brands fa-google"></i>
+            <i class="fa-brands fa-skype"></i>
+        </div>
     </div>
 </body>
 </html>
