final landing-pages

--- a/index.html
+++ b/index.html
@@ -452,8 +452,7 @@
     </div>
     <div class="contact-number" style="color: white;">
         <div class="right-side">
-            <i class="fa-solid fa-phone" style="color: #21A7B2;"></i>
-            <p>Call us now and get special offers!</p>
+            <p><i class="fa-solid fa-phone" style="color: #21A7B2;"></i>Call us now and get special offers!</p>
         </div>
         <div class="left-side">
             <button>Call Us Now</button>
@@ -483,9 +482,9 @@
     <div class="footer">
         <div class="address" >
             <p style="font-family: 'plus jakarta sans', sans-serif; font-weight: 600;">Our Location</p>
-            <p style="font-family: 'plus jakarta sans', sans-serif; font-size: clamp(10px, calc(12px + 0.2vw), 14px); font-weight: 300; margin-top: 10px;">Lalu Khet Das Number, Gali No. 420</p>
-            <p style="font-family: 'plus jakarta sans', sans-serif; font-size: clamp(10px, calc(12px + 0.2vw), 14px); font-weight: 300; margin-top: 10px;">T.(208)090078601</p>
-            <p style="font-family: 'plus jakarta sans', sans-serif; font-size: clamp(10px, calc(12px + 0.2vw), 14px); font-weight: 300; margin-top: 10px;">E.shahoodkhan@gmail.com</p>
+            <p style="font-family: 'plus jakarta sans', sans-serif; font-size: clamp(8px, calc(10px + 0.2vw), 12px); font-weight: 300; margin-top: 5px;">Lalu Khet Das Number, Gali No. 420
+            <br>T.(208)090078601
+            <br style="width: 100%;">shahoodkhan@gmail.com
         </div>
         <div class="footer-logo" >
             <img src="assets/logo.png" style="width: 50%;">
@@ -495,7 +494,7 @@
             <i class="fa-brands fa-twitter"></i>
             <i class="fa-solid fa-wifi"></i>
             <i class="fa-brands fa-google"></i>
-            <i class="fa-brands fa-skype"></i>
+            <i class="fa-brands fa-skype" style="margin-right: 0px;"></i>
         </div>
     </div>
 </body>
