--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
                         <a href="#" class="nav-link">HOME</a>
                     </li>
                     <li>
-                        <a href="#" class="nav-link">MENU</a>
+                        <a href="menu.html" class="nav-link">MENU</a>
                     </li>
                     <li>
                         <a href="#" class="nav-link">BOOKING</a>
@@ -70,7 +70,7 @@
             <p class="shop--description">
                 Crafted with care and precision, this blend represents the pinnacle of coffee craftsmenship, where artistry meets expertise to create a symphony of flavor.
             </p>
-            <button class="menu--btn">
+            <button class="menu--btn" href="menu.html">
                 VIEW MENU
             </button>
         </div>
