--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
             <nav class="navbar">
                 <ul class="nav-menu" style="display: flex;">
                     <li>
-                        <a href="#" class="nav-link">HOME</a>
+                        <a href="index.html" class="nav-link">HOME</a>
                     </li>
                     <li>
                         <a href="menu.html" class="nav-link">MENU</a>
