--- a/menu.html
+++ b/menu.html
@@ -22,16 +22,16 @@
     <script src="script.js" defer></script>
     <title>Brew Topia-Menu</title>
 </head>
-<body>
+<body style="background-color: rgb(162, 144, 117);">
     <div class="menu-main--bg-img">
         <div class="nav-main" style="display: flex;">
             <nav class="navbar">
                 <ul class="nav-menu" style="display: flex;">
                     <li>
-                        <a href="#" class="nav-link">HOME</a>
+                        <a href="index.html" class="nav-link">HOME</a>
                     </li>
                     <li>
-                        <a href="#" class="nav-link">MENU</a>
+                        <a href="menu.html" class="nav-link">MENU</a>
                     </li>
                     <li>
                         <a href="#" class="nav-link">BOOKING</a>
