--- a/index.html
+++ b/index.html
@@ -322,7 +322,7 @@
                     2.20
                 </div>
             </div>
-            <div class="view-menu-1" id="view-menu">
+            <div class="view-menu-1" id="view-menu" href="menu.html">
                 <button>View All Menu</button>
             </div>
         </div>
@@ -432,7 +432,7 @@
                     2.20
                 </div>
             </div>
-            <div class="view-menu-2" id="view-menu">
+            <div class="view-menu-2" id="view-menu" href="menu.html">
                 <button>View All Menu</button>
             </div>
         </div>
