--- a/menu.html
+++ b/menu.html
@@ -22,7 +22,7 @@
     <script src="script.js" defer></script>
     <title>Brew Topia-Menu</title>
 </head>
-<body style="background-color: rgb(162, 144, 117);">
+<body style="background-color: rgb(105 88 63);">
     <div class="menu-main--bg-img">
         <div class="nav-main" style="display: flex;">
             <nav class="navbar">
