slider-img transition

--- a/index.html
+++ b/index.html
@@ -24,6 +24,10 @@
 </head>
 <body>
     <div class="background-image">
+        <div class="slider-container">
+            <img src="assets/slide-1.jpg" alt="" class="slide">
+            <img src="assets/slide-2.jpg" alt="" class="slide">
+        </div>
         <div class="nav-main" style="display: flex;">
             <nav class="navbar">
                 <ul class="nav-menu" style="display: flex;">
@@ -70,8 +74,8 @@
             <p class="shop--description">
                 Crafted with care and precision, this blend represents the pinnacle of coffee craftsmenship, where artistry meets expertise to create a symphony of flavor.
             </p>
-            <button class="menu--btn" href="menu.html">
-                VIEW MENU
+            <button class="menu--btn">
+                <a  href="menu.html">VIEW MENU</a>
             </button>
         </div>
     </div>
