menu-btn link fix

--- a/index.html
+++ b/index.html
@@ -74,9 +74,7 @@
             <p class="shop--description">
                 Crafted with care and precision, this blend represents the pinnacle of coffee craftsmenship, where artistry meets expertise to create a symphony of flavor.
             </p>
-            <button class="menu--btn">
-                <a  href="menu.html">VIEW MENU</a>
-            </button>
+            <a class="menu--btn" href="menu.html">VIEW MENU</a>
         </div>
     </div>
     <div class="origin--grid">
@@ -327,7 +325,7 @@
                 </div>
             </div>
             <div class="view-menu-1" id="view-menu" href="menu.html">
-                <button>View All Menu</button>
+                <a href="menu.html">View All Menu</a>
             </div>
         </div>
         <div class="menu-list-2">
@@ -437,7 +435,7 @@
                 </div>
             </div>
             <div class="view-menu-2" id="view-menu" href="menu.html">
-                <button>View All Menu</button>
+                <a href="menu.html">View All Menu</a>
             </div>
         </div>
     </div>
