home page pic change

--- a/index.html
+++ b/index.html
@@ -26,10 +26,10 @@
     <div class="background-image">
         <div class="slider-container">
             <img src="assets/slide-1.jpg" alt="" class="slide">
-            <img src="assets/slide-2.jpg" alt="" class="slide">
+            <img src="assets/slide-2.jpg" alt="" class="slide" style="opacity: 0.3;">
         </div>
         <div class="nav-main" style="display: flex;">
-            <nav class="navbar">
+            <nav class="navbar" style="z-index: 10;">
                 <ul class="nav-menu" style="display: flex;">
                     <li>
                         <a href="index.html" class="nav-link">HOME</a>
@@ -43,7 +43,7 @@
                 </ul>
             </nav>
             <img src="assets/logo.png" class="logo">
-            <nav class="navbar">
+            <nav class="navbar" style="z-index: 10;">
                 <ul class="nav-menu" style="display: flex;">
                     <li>
                         <a href="#" class="nav-link">ABOUT</a>
