nav-menu changes

--- a/menu.html
+++ b/menu.html
@@ -42,7 +42,7 @@
             <nav class="navbar">
                 <ul class="nav-menu" style="display: flex;">
                     <li>
-                        <a href="#" class="nav-link">ABOUT</a>
+                        <a href="about.html" class="nav-link">ABOUT</a>
                     </li>
                     <li>
                         <a href="#" class="nav-link">BLOG</a>
@@ -100,10 +100,10 @@
             </div>
             <div class="menu-page-list--item-2" id="menu-page--items">
                 <div class="menu-page--coffee-name">
-                    Espresso
+                    Classic Cappucino
                     <br>
                     <span>
-                        Espresso, where the passion meets perfection! 
+                        Rich espresso, steamed milk, topped with foam.                                     
                     </span>
                 </div>
                 <div class="menu-page--medium-price">
@@ -115,10 +115,10 @@
             </div>
             <div class="menu-page-list--item-3" id="menu-page--items">
                 <div class="menu-page--coffee-name">
-                    Espresso
+                    Mocchiato
                     <br>
                     <span>
-                        Espresso, where the passion meets perfection! 
+                    The perfect harmony of espresso and sweetness.
                     </span>
                 </div>
                 <div class="menu-page--medium-price">
@@ -130,10 +130,10 @@
             </div>
             <div class="menu-page-list--item-4" id="menu-page--items">
                 <div class="menu-page--coffee-name">
-                    Espresso
+                    Cappucino
                     <br>
                     <span>
-                        Espresso, where the passion meets perfection! 
+                        Where rich espresso meets frothy perfection. 
                     </span>
                 </div>
                 <div class="menu-page--medium-price">
@@ -145,10 +145,10 @@
             </div>
             <div class="menu-page-list--item-5" id="menu-page--items">
                 <div class="menu-page--coffee-name">
-                    Espresso
+                    Mocha Latte
                     <br>
                     <span>
-                        Espresso, where the passion meets perfection! 
+                        The perfect blend of chocolate and espresso. 
                     </span>
                 </div>
                 <div class="menu-page--medium-price">
@@ -160,10 +160,10 @@
             </div>
             <div class="menu-page-list--item-6" id="menu-page--items">
                 <div class="menu-page--coffee-name">
-                    Espresso
+                    Caramel Latte
                     <br>
                     <span>
-                        Espresso, where the passion meets perfection! 
+                        Where smooth espresso meets golden caramel 
                     </span>
                 </div>
                 <div class="menu-page--medium-price">
@@ -175,10 +175,25 @@
             </div>
             <div class="menu-page-list--item-7" id="menu-page--items">
                 <div class="menu-page--coffee-name">
-                    Espresso
+                    Cafe Americano
                     <br>
                     <span>
-                        Espresso, where the passion meets perfection! 
+                    The essence of pure coffee bliss. 
+                    </span>
+                </div>
+                <div class="menu-page--medium-price">
+                    1.75
+                </div>
+                <div class="menu-page--large-price">
+                    2.20
+                </div>
+            </div>
+            <div class="menu-page-list--item-7" id="menu-page--items">
+                <div class="menu-page--coffee-name">
+                    Nitro Cold Brew
+                    <br>
+                    <span>
+                    Cold brew infused with nitrogen for a creamy texture. 
                     </span>
                 </div>
                 <div class="menu-page--medium-price">
@@ -205,10 +220,10 @@
             </div>
             <div class="menu-page-list--item-1" id="menu-page--items">
                 <div class="menu-page--coffee-name">
-                    Espresso
+                    Mocchiato
                     <br>
                     <span>
-                        Espresso, where the passion meets perfection! 
+                        The perfect harmony of espresso and sweetness. 
                     </span>
                 </div>
                 <div class="menu-page--medium-price">
@@ -220,10 +235,10 @@
             </div>
             <div class="menu-page-list--item-2" id="menu-page--items">
                 <div class="menu-page--coffee-name">
-                    Espresso
+                    Frappuccino
                     <br>
                     <span>
-                        Espresso, where the passion meets perfection! 
+                    Blended coffee with flavors and whipped cream.   
                     </span>
                 </div>
                 <div class="menu-page--medium-price">
@@ -235,10 +250,10 @@
             </div>
             <div class="menu-page-list--item-3" id="menu-page--items">
                 <div class="menu-page--coffee-name">
-                    Espresso
+                    Latte
                     <br>
                     <span>
-                        Espresso, where the passion meets perfection! 
+                        Espresso with a creamy layer of steamed milk. 
                     </span>
                 </div>
                 <div class="menu-page--medium-price">
@@ -250,10 +265,10 @@
             </div>
             <div class="menu-page-list--item-4" id="menu-page--items">
                 <div class="menu-page--coffee-name">
-                    Espresso
+                    Flat White
                     <br>
                     <span>
-                        Espresso, where the passion meets perfection! 
+                        Smooth espresso with velvety steamed milk. 
                     </span>
                 </div>
                 <div class="menu-page--medium-price">
@@ -265,10 +280,10 @@
             </div>
             <div class="menu-page-list--item-5" id="menu-page--items">
                 <div class="menu-page--coffee-name">
-                    Espresso
+                    Affogato
                     <br>
                     <span>
-                        Espresso, where the passion meets perfection! 
+                        Espresso poured over vanilla ice cream. 
                     </span>
                 </div>
                 <div class="menu-page--medium-price">
@@ -280,10 +295,10 @@
             </div>
             <div class="menu-page-list--item-6" id="menu-page--items">
                 <div class="menu-page--coffee-name">
-                    Espresso
+                    Hot Chocolate
                     <br>
                     <span>
-                        Espresso, where the passion meets perfection! 
+                        Rich and creamy chocolate drink. 
                     </span>
                 </div>
                 <div class="menu-page--medium-price">
@@ -295,10 +310,10 @@
             </div>
             <div class="menu-page-list--item-7" id="menu-page--items">
                 <div class="menu-page--coffee-name">
-                    Espresso
+                    Matcha Latte
                     <br>
                     <span>
-                        Espresso, where the passion meets perfection! 
+                        Whisked green tea powder with milk. 
                     </span>
                 </div>
                 <div class="menu-page--medium-price">
@@ -313,7 +328,7 @@
     <div class="menu-page--parent-container2">
         <div class="menu-page--list3">
             <div class="menu-page--list-name">
-                <div style="font-size: 40px; color: #21A7B2;" class="coffee">coffee</div>
+                <div style="font-size: 40px; color: #21A7B2;" class="coffee">Non-Coffee Beverages</div>
                     <div class="menu-page--medium-size">
                         Medium
                         <br>
@@ -327,10 +342,10 @@
             </div>
             <div class="menu-page-list--item-1" id="menu-page--items">
                 <div class="menu-page--coffee-name">
-                    Espresso
+                    Black Tea
                     <br>
                     <span>
-                        Espresso, where the passion meets perfection! 
+                        Classic strong tea served hot. 
                     </span>
                 </div>
                 <div class="menu-page--medium-price">
@@ -342,10 +357,10 @@
             </div>
             <div class="menu-page-list--item-2" id="menu-page--items">
                 <div class="menu-page--coffee-name">
-                    Espresso
+                    Chai Latte
                     <br>
                     <span>
-                        Espresso, where the passion meets perfection! 
+                        Spiced tea mixed with steamed milk. 
                     </span>
                 </div>
                 <div class="menu-page--medium-price">
@@ -357,10 +372,10 @@
             </div>
             <div class="menu-page-list--item-3" id="menu-page--items">
                 <div class="menu-page--coffee-name">
-                    Espresso
+                    Matcha Latte
                     <br>
                     <span>
-                        Espresso, where the passion meets perfection! 
+                        Whisked green tea powder with milk. 
                     </span>
                 </div>
                 <div class="menu-page--medium-price">
@@ -372,10 +387,10 @@
             </div>
             <div class="menu-page-list--item-4" id="menu-page--items">
                 <div class="menu-page--coffee-name">
-                    Espresso
+                    Herbal Teas
                     <br>
                     <span>
-                        Espresso, where the passion meets perfection! 
+                        Soothing blends like chamomile and mint. 
                     </span>
                 </div>
                 <div class="menu-page--medium-price">
@@ -387,10 +402,10 @@
             </div>
             <div class="menu-page-list--item-5" id="menu-page--items">
                 <div class="menu-page--coffee-name">
-                    Espresso
+                    Iced Tea
                     <br>
                     <span>
-                        Espresso, where the passion meets perfection! 
+                        Refreshing cold tea in lemon or peach flavors. 
                     </span>
                 </div>
                 <div class="menu-page--medium-price">
@@ -402,10 +417,10 @@
             </div>
             <div class="menu-page-list--item-6" id="menu-page--items">
                 <div class="menu-page--coffee-name">
-                    Espresso
+                    Lemonade
                     <br>
                     <span>
-                        Espresso, where the passion meets perfection! 
+                    Zesty and sweet lemon drink. 
                     </span>
                 </div>
                 <div class="menu-page--medium-price">
@@ -417,10 +432,10 @@
             </div>
             <div class="menu-page-list--item-7" id="menu-page--items">
                 <div class="menu-page--coffee-name">
-                    Espresso
+                    Smoothies
                     <br>
                     <span>
-                        Espresso, where the passion meets perfection! 
+                        Fresh fruit blends like berry or mango. 
                     </span>
                 </div>
                 <div class="menu-page--medium-price">
@@ -433,24 +448,24 @@
         </div>
         <div class="menu-page--list4">
             <div class="menu-page--list-name">
-                <div style="font-size: 40px; color: #21A7B2;" class="coffee">coffee</div>
+                <div style="font-size: 40px; color: #21A7B2;" class="coffee">Snacks & Bakery Items</div>
                     <div class="menu-page--medium-size">
-                        Medium
+                        Half
                         <br>
                         16oz
                     </div>
                     <div class="menu-page--large-size">
-                        Large
+                        Full
                         <br>
                         20oz
                     </div>
             </div>
             <div class="menu-page-list--item-1" id="menu-page--items">
                 <div class="menu-page--coffee-name">
-                    Espresso
+                    Muffins
                     <br>
                     <span>
-                        Espresso, where the passion meets perfection! 
+                        Fluffy baked treats in various flavors. 
                     </span>
                 </div>
                 <div class="menu-page--medium-price">
@@ -462,10 +477,10 @@
             </div>
             <div class="menu-page-list--item-2" id="menu-page--items">
                 <div class="menu-page--coffee-name">
-                    Espresso
+                    Croissants
                     <br>
                     <span>
-                        Espresso, where the passion meets perfection! 
+                        Buttery and flaky pastries.
                     </span>
                 </div>
                 <div class="menu-page--medium-price">
@@ -477,10 +492,10 @@
             </div>
             <div class="menu-page-list--item-3" id="menu-page--items">
                 <div class="menu-page--coffee-name">
-                    Espresso
+                    Bagels
                     <br>
                     <span>
-                        Espresso, where the passion meets perfection! 
+                        Dense bread rings with cream cheese. 
                     </span>
                 </div>
                 <div class="menu-page--medium-price">
@@ -492,10 +507,10 @@
             </div>
             <div class="menu-page-list--item-4" id="menu-page--items">
                 <div class="menu-page--coffee-name">
-                    Espresso
+                    Cookies
                     <br>
                     <span>
-                        Espresso, where the passion meets perfection! 
+                        Soft and chewy sweet delights. 
                     </span>
                 </div>
                 <div class="menu-page--medium-price">
@@ -507,10 +522,10 @@
             </div>
             <div class="menu-page-list--item-5" id="menu-page--items">
                 <div class="menu-page--coffee-name">
-                    Espresso
+                    Brownies
                     <br>
                     <span>
-                        Espresso, where the passion meets perfection! 
+                        Rich chocolate squares. 
                     </span>
                 </div>
                 <div class="menu-page--medium-price">
@@ -522,10 +537,10 @@
             </div>
             <div class="menu-page-list--item-6" id="menu-page--items">
                 <div class="menu-page--coffee-name">
-                    Espresso
+                    Donuts
                     <br>
                     <span>
-                        Espresso, where the passion meets perfection! 
+                        Sweet, fried pastries with toppings. 
                     </span>
                 </div>
                 <div class="menu-page--medium-price">
@@ -537,10 +552,10 @@
             </div>
             <div class="menu-page-list--item-7" id="menu-page--items">
                 <div class="menu-page--coffee-name">
-                    Espresso
+                    Scones
                     <br>
                     <span>
-                        Espresso, where the passion meets perfection! 
+                        Crumbly baked goods with jam or cream. 
                     </span>
                 </div>
                 <div class="menu-page--medium-price">
@@ -555,9 +570,8 @@
     <div class="footer">
         <div class="address" >
             <p style="font-family: 'plus jakarta sans', sans-serif; font-weight: 600;">Our Location</p>
-            <p style="font-family: 'plus jakarta sans', sans-serif; font-size: clamp(8px, calc(10px + 0.2vw), 12px); font-weight: 300; margin-top: 5px;">Lalu Khet Das Number, Gali No. 420
-            <br>T.(208)090078601
-            <br style="width: 100%;">shahoodkhan@gmail.com
+            <p style="font-family: 'plus jakarta sans', sans-serif; font-size: clamp(8px, calc(10px + 0.2vw), 12px); font-weight: 300; margin-top: 5px;">DHA PHASE 8
+            <br style="width: 100%;">BrewTopia@gmail.com
         </div>
         <div class="footer-logo" >
             <img src="assets/logo.png" style="width: 50%;">
