--- a/index.html
+++ b/index.html
@@ -28,40 +28,34 @@
             <img src="assets/slide-1.jpg" alt="" class="slide">
             <img src="assets/slide-2.jpg" alt="" class="slide" style="opacity: 0.3;">
         </div>
-        <div class="nav-main" style="display: flex;">
-            <nav class="navbar" style="z-index: 10;">
-                <ul class="nav-menu" style="display: flex;">
-                    <li>
-                        <a href="index.html" class="nav-link">HOME</a>
-                    </li>
-                    <li>
-                        <a href="menu.html" class="nav-link">MENU</a>
-                    </li>
-                    <li>
-                        <a href="#" class="nav-link">BOOKING</a>
-                    </li>
-                </ul>
-            </nav>
-            <img src="assets/logo.png" class="logo">
-            <nav class="navbar" style="z-index: 10;">
-                <ul class="nav-menu" style="display: flex;">
-                    <li>
-                        <a href="#" class="nav-link">ABOUT</a>
-                    </li>
-                    <li>
-                        <a href="#" class="nav-link">BLOG</a>
-                    </li>
-                    <li>
-                        <a href="#" class="nav-link">CONTACT</a>
-                    </li>
-                </ul>
-            </nav>
+        <nav class="navbar" style="gap: 30px;">
+            <img src="assets/logo.png" alt="" class="logo">
+            <ul class="nav-menu">
+                <li>
+                    <a href="#" class="nav-link">Home</a>
+                </li>
+                <li>
+                    <a href="#" class="nav-link">Menu</a>
+                </li>
+                <li>
+                    <a href="#" class="nav-link">Booking</a>
+                </li>
+                <li>
+                    <a href="#" class="nav-link">About</a>
+                </li>
+                <li>
+                    <a href="#" class="nav-link">Blog</a>
+                </li>
+                <li>
+                    <a href="#" class="nav-link">Contact</a>
+                </li>
+            </ul>
             <div class="hamburger">
                 <div class="bar"></div>
                 <div class="bar"></div>
                 <div class="bar"></div>
             </div>
-        </div>
+        </nav>
         <div class="slider--content">
             <div class="headings">
                 <h1 class="main--heading">
